Corrected navigation z-index bug Closes https://github.com/TryGhost/Casper/issues/345

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -81,12 +81,12 @@ body {
     .home-template .post-feed,
     .tag-template .post-feed,
     .author-template .post-feed {
-        margin-top: -110px;
+        margin-top: -70px;
+        padding-top: 0;
     }
     .home-template .site-nav {
         position: relative;
         top: -70px;
-        z-index: 300;
     }
 }
 
@@ -134,8 +134,6 @@ body {
 }
 
 .site-header-content {
-    position: relative;
-    z-index: 300;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -181,7 +179,7 @@ body {
 
 .site-nav {
     position: relative;
-    z-index: 100;
+    z-index: 300;
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
@@ -361,7 +359,6 @@ The knock-on effect of this is ugly browser-scroll bars at the bottom, so 80px o
 
 .post-feed {
     position: relative;
-    z-index: 200;
     display: flex;
     flex-wrap: wrap;
     margin: 0 -20px;
@@ -893,11 +890,11 @@ Super neat trick courtesy of @JoelDrapper
     display: inline-block;
     width: auto;
     max-width: 100%;
-    vertical-align: top;
     overflow-x: auto;
     margin: 0.5em 0 2.5em;
     border-spacing: 0;
     border-collapse: collapse;
+    vertical-align: top;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     font-size: 1.6rem;
     white-space: nowrap;
